name:                markdown
version:             0.1.0.0
synopsis:            A simple mardown parser
description:         See README
homepage:            https://github.com/MattMSumner/markdown
license:             MIT
license-file:        LICENSE
author:              Matt Sumner
maintainer:          matt.m.sumner@gmail.com
copyright:           2016
category:            Language
build-type:          Simple
cabal-version:       >=1.10

executable markdown
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9
                     , megaparsec >= 5 && < 6
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/MattMSumner/markdown
